# ai-job-search

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SECURITY.md  SETUP.md  deno.json  docker-compose.yml
backend/ai-service/: Dockerfile  README.md  main.py  pyproject.toml
backend/ai-service/api/routes/: llm.py
backend/ai-service/core/: config.py
backend/ai-service/db/: vector_init.py
backend/ai-service/models/: schemas.py
backend/ai-service/services/: embeddings.py  orchestrator.py  qdrant_service.py  storage.py
backend/api-gateway/: Dockerfile  go.mod  go.sum  main.go
backend/api-gateway/cmd/server/: main.go
backend/api-gateway/docs/: docs.go  swagger.json  swagger.yaml
backend/api-gateway/internal/auth/: rbac.go
backend/api-gateway/internal/config/: config.go
backend/api-gateway/internal/controllers/: auth_controller.go
backend/api-gateway/internal/db/: db.go
backend/api-gateway/internal/models/: models.go
backend/api-gateway/internal/routes/: router.go
backend/api-gateway/migrations/: 0001_init.down.sql  0001_init.up.sql
backend/data-service/: Dockerfile  Project.toml
backend/data-service/src/: graph_init.jl  main.jl
cv/: main_example.tex
docs/: refactor-plan.md
frontend/: Dockerfile  package-lock.json
frontend/src/app/: globals.css  layout.module.css  layout.tsx  page.module.css  page.tsx
frontend/src/components/: ChatInterface.module.css  ChatInterface.tsx  JobMatchCard.module.css  JobMatchCard.tsx  ResumeUpload.module.css  ResumeUpload.tsx  Sidebar.module.css  Sidebar.tsx
tests/robot/: api_tests.robot
(+13 files in other folders)
