[project]
name = "ai-service"
version = "0.1.0"
description = "FastAPI AI microservice for orchestrating LLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0.post1",
    "pydantic>=2.5.2",
    "qdrant-client>=1.7.0",
    "redis>=5.0.1",
    "langchain>=0.0.345"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.3"
]
